# DesignPattern

./: .gitignore  CMakeLists.txt
SimpleFactory/: CMakeLists.txt
SimpleFactory/Inc/: simple_factory.h
SimpleFactory/Src/: simple_factory.cpp
Singleton/: CMakeLists.txt
Singleton/Inc/: singleton.h
Singleton/Src/: singleton.cpp
